IDP-2229 Updated initiative costants and service