@@ -10,7 +10,6 @@ import it.gov.pagopa.initiative.connector.io_service.IOManageBackEndRestConnecto
 import it.gov.pagopa.initiative.connector.onboarding.OnboardingRestConnector;
 import it.gov.pagopa.initiative.connector.ranking.RankingRestConnector;
 import it.gov.pagopa.initiative.constants.InitiativeConstants;
-import it.gov.pagopa.initiative.constants.InitiativeConstants.Exception.InternalServerError;
 import it.gov.pagopa.initiative.constants.InitiativeConstants.Status;
 import it.gov.pagopa.initiative.dto.*;
 import it.gov.pagopa.initiative.dto.io.service.KeysDTO;
@@ -18,7 +17,7 @@ import it.gov.pagopa.initiative.dto.io.service.ServiceRequestDTO;
 import it.gov.pagopa.initiative.dto.io.service.ServiceResponseDTO;
 import it.gov.pagopa.initiative.event.CommandsProducer;
 import it.gov.pagopa.initiative.event.InitiativeProducer;
-import it.gov.pagopa.initiative.exception.InitiativeException;
+import it.gov.pagopa.initiative.exception.custom.*;
 import it.gov.pagopa.initiative.mapper.InitiativeAdditionalDTOsToIOServiceRequestDTOMapper;
 import it.gov.pagopa.initiative.mapper.InitiativeModelToDTOMapper;
 import it.gov.pagopa.initiative.model.AutomatedCriteria;
@@ -33,7 +32,6 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Pageable;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
 import org.springframework.util.InvalidMimeTypeException;
@@ -129,11 +127,8 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
     @Override
     public InitiativeDetailDTO getInitiativeBeneficiaryDetail(String initiativeId, Locale acceptLanguage) {
 
-        Initiative initiativeDetail = initiativeRepository.findByInitiativeIdAndStatusIn(initiativeId, List.of(Status.PUBLISHED, Status.CLOSED)).orElseThrow(() -> new InitiativeException(
-                InitiativeConstants.Exception.NotFound.CODE,
-                String.format(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE, initiativeId),
-                HttpStatus.NOT_FOUND));
-
+        Initiative initiativeDetail = initiativeRepository.findByInitiativeIdAndStatusIn(initiativeId, List.of(Status.PUBLISHED, Status.CLOSED))
+                .orElseThrow(() -> new InitiativeNotFoundException(InitiativeConstants.Exception.NotFound.INITIATIVE_NOT_FOUND_MESSAGE.formatted(initiativeId)));
 
         return initiativeModelToDTOMapper.toInitiativeDetailDTO(initiativeDetail, acceptLanguage);
 
@@ -167,10 +162,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
     @Override
     public Initiative getInitiativeBeneficiaryView(String initiativeId) {
         return initiativeRepository.retrieveInitiativeBeneficiaryView(initiativeId, true)
-                .orElseThrow(() -> new InitiativeException(
-                        InitiativeConstants.Exception.NotFound.CODE,
-                        String.format(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE, initiativeId),
-                        HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new InitiativeNotFoundException(InitiativeConstants.Exception.NotFound.INITIATIVE_NOT_FOUND_MESSAGE.formatted(initiativeId)));
     }
 
     @Override
@@ -260,12 +252,9 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
             //Move this validation in [All Steps validation -> .validateAllWizardSteps()]
             if (initiative.getGeneral().getDescriptionMap().get(Locale.ITALIAN.getLanguage()) == null) {
                 auditUtilities.logInitiativeError(this.getUserId(), initiativeId, organizationId,
-                        InitiativeConstants.Exception.BadRequest.INITIATIVE_DESCRIPTION_LANGUAGE_MESSAGE);
+                        InitiativeConstants.Exception.BadRequest.INITIATIVE_ITALIAN_LANGUAGE_REQUIRED_FOR_DESCRIPTION);
                 performanceLog(startTime, "UPDATE_INITIATIVE_REFUND_RULES");
-                throw new InitiativeException(
-                        InitiativeConstants.Exception.BadRequest.CODE,
-                        InitiativeConstants.Exception.BadRequest.INITIATIVE_DESCRIPTION_LANGUAGE_MESSAGE,
-                        HttpStatus.BAD_REQUEST);
+                throw new InitiativeRequiredLanguageException("Italian language is required for initiative [%s] description".formatted(initiativeId));
             }
             initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
             auditUtilities.logInitiativeInRevision(this.getUserId(), initiativeId, organizationId);
@@ -322,11 +311,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
             log.error("[LOGICAL_DELETE_INITIATIVE] - Initiative: {}. Cannot be deleted. Current status is {}.", initiative.getInitiativeId(), initiative.getStatus());
             auditUtilities.logInitiativeError(this.getUserId(), initiativeId, organizationId, "initiative cannot be deleted");
             performanceLog(startTime, DELETE_INITIATIVE_SERVICE);
-            throw new InitiativeException(
-                    InitiativeConstants.Exception.BadRequest.CODE,
-                    String.format(InitiativeConstants.Exception.BadRequest.INITIATIVE_CANNOT_BE_DELETED, initiativeId),
-                    HttpStatus.BAD_REQUEST
-            );
+            throw new DeleteInitiativeException("Initiative [%s] with current status [%s]  cannot be deleted".formatted(initiativeId,initiative.getStatus()));
         } else {
             initiative.setEnabled(false);
             this.initiativeRepository.save(initiative);
@@ -355,11 +340,8 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
         if (InitiativeConstants.Role.PAGOPA_ADMIN.equals(role)) {
             log.info("[UPDATE_TO_{}_STATUS] - Initiative: {} Status: {}. Not processable status", nextStatus, initiative.getInitiativeId(), initiative.getStatus());
             auditUtilities.logInitiativeError(this.getUserId(), initiative.getInitiativeId(), initiative.getOrganizationId(),
-                    String.format(InitiativeConstants.Exception.BadRequest.PERMISSION_NOT_VALID, role));
-            throw new InitiativeException(
-                    InitiativeConstants.Exception.BadRequest.CODE,
-                    String.format(InitiativeConstants.Exception.BadRequest.PERMISSION_NOT_VALID, role),
-                    HttpStatus.BAD_REQUEST);
+                    InitiativeConstants.Exception.BadRequest.INITIATIVE_ADMIN_ROLE_NOT_ALLOWED);
+            throw new AdminPermissionException("Admin permission not allowed for current initiative [%s]".formatted(initiative.getInitiativeId()));
         }
 
         //validation status
@@ -367,28 +349,26 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
             if (!Arrays.asList(InitiativeConstants.Status.Validation.INITIATIVE_ALLOWED_STATES_TO_BECOME_PUBLISHED_ARRAY).contains(initiative.getStatus())) {
                 log.info("[UPDATE_TO_{}_STATUS] - Initiative: {} Status: {}. Not processable status", nextStatus, initiative.getInitiativeId(), initiative.getStatus());
                 auditUtilities.logInitiativeError(this.getUserId(), initiative.getInitiativeId(), initiative.getOrganizationId(),
-                        String.format(InitiativeConstants.Exception.BadRequest.INITIATIVE_BY_INITIATIVE_ID_UNPROCESSABLE_FOR_STATUS_NOT_VALID, initiative.getInitiativeId()));
-                throw new InitiativeException(
-                        InitiativeConstants.Exception.BadRequest.CODE,
-                        String.format(InitiativeConstants.Exception.BadRequest.INITIATIVE_BY_INITIATIVE_ID_UNPROCESSABLE_FOR_STATUS_NOT_VALID, initiative.getInitiativeId()),
-                        HttpStatus.BAD_REQUEST);
+                       InitiativeConstants.Exception.BadRequest.INITIATIVE_STATUS_NOT_VALID);
+                throw new InitiativeStatusNotValidException(
+                        "Initiative [%s] with status [%s] is unprocessable for status not valid".formatted(initiative.getInitiativeId(),initiative.getStatus())
+                );
             }
         } else {
             auditUtilities.logInitiativeError(this.getUserId(), initiative.getInitiativeId(), initiative.getOrganizationId(),
-                    String.format(InitiativeConstants.Exception.BadRequest.INITIATIVE_BY_INITIATIVE_ID_UNPROCESSABLE_FOR_STATUS_NOT_VALID, initiative.getInitiativeId()));
-            throw new InitiativeException(
-                    InitiativeConstants.Exception.BadRequest.CODE,
-                    String.format(InitiativeConstants.Exception.BadRequest.INITIATIVE_BY_INITIATIVE_ID_UNPROCESSABLE_FOR_STATUS_NOT_VALID, initiative.getInitiativeId()),
-                    HttpStatus.BAD_REQUEST);
+                   InitiativeConstants.Exception.BadRequest.INITIATIVE_STATUS_NOT_VALID);
+            throw new InitiativeStatusNotValidException(
+                    "Initiative [%s] with status [%s] is unprocessable for status not valid".formatted(initiative.getInitiativeId(),initiative.getStatus())
+            );
         }
 
         //validation end date
         LocalDate initiativeEndDate = initiative.getGeneral().getEndDate();
         if(LocalDate.now().isAfter(initiativeEndDate)){
-            throw new InitiativeException(
-                    InitiativeConstants.Exception.BadRequest.CODE,
-                    String.format(INITIATIVE_BY_INITIATIVE_ID_UNPROCESSABLE_FOR_NOT_VALID_END_DATE, initiative.getInitiativeId(), initiativeEndDate),
-                    HttpStatus.BAD_REQUEST);
+            throw new InitiativeDateInvalidException(
+                    INITIATIVE_BY_INITIATIVE_ID_UNPROCESSABLE_FOR_NOT_VALID_END_DATE,
+                    "Initiative [%s] unprocessable because the end date [%s] has passed".formatted(initiative.getInitiativeId(),initiativeEndDate)
+            );
         }
     }
 
@@ -404,12 +384,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
         long startTime = System.currentTimeMillis();
         Initiative initiative = initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(
                         organizationId, initiativeId, true)
-                .orElseThrow(() -> new InitiativeException(
-                        InitiativeConstants.Exception.NotFound.CODE,
-                        String.format(
-                                InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE,
-                                initiativeId),
-                        HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new InitiativeNotFoundException(InitiativeConstants.Exception.NotFound.INITIATIVE_NOT_FOUND_MESSAGE.formatted(initiativeId)));
 
         try {
             this.validate(contentType, fileName);
@@ -423,9 +398,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
             return new LogoDTO(fileName, initiativeUtils.createLogoUrl(organizationId, initiativeId), localDateTime);
         } catch (Exception e) {
             performanceLog(startTime, "STORE_INITIATIVE_LOGO");
-            throw new InitiativeException(InternalServerError.CODE,
-                    e.getMessage(),
-                    HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new InitiativeLogoException("An error occurred during the uploading logo");
         }
     }
 
@@ -505,20 +478,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
     @Override
     public Initiative getInitiativeIdFromServiceId(String serviceId) {
         return initiativeRepository.retrieveByServiceId(serviceId)
-                .orElseThrow(() -> new InitiativeException(
-                        InitiativeConstants.Exception.NotFound.CODE,
-                        String.format(InitiativeConstants.Exception.NotFound.INITIATIVE_ID_BY_SERVICE_ID_MESSAGE, serviceId),
-                        HttpStatus.NOT_FOUND));
-    }
-
-    @Override
-    public InitiativeAdditional getPrimaryAndSecondaryTokenIO(String initiativeId) {
-        Initiative initiative = initiativeRepository.findByInitiativeIdAndEnabled(initiativeId, true)
-                .orElseThrow(() -> new InitiativeException(
-                        InitiativeConstants.Exception.NotFound.CODE,
-                        String.format(InitiativeConstants.Exception.NotFound.PRIMARY_AND_SECONDARY_TOKEN_MESSAGE, initiativeId),
-                        HttpStatus.NOT_FOUND));
-        return initiative.getAdditionalInfo();
+                .orElseThrow(() -> new InitiativeNotFoundException("Initiative with serviceId [%s] not found".formatted(serviceId)));
     }
 
     @Override
@@ -535,10 +495,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
                         new CFDTO(cf));
                 userId = encryptedCfDTO.getToken();
             } catch (Exception e) {
-                throw new InitiativeException(
-                        InternalServerError.CODE,
-                        e.getMessage(),
-                        HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new EncryptInvocationException("An error occurred during the encrypt invocation",true,e);
             }
         }
         new ResponseOnboardingDTO();
@@ -550,10 +507,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
             log.info("response onbording: " + responseOnboardingDTO);
         } catch (Exception e) {
             auditUtilities.logInitiativeError(this.getUserId(), initiativeId, organizationId, "request for onboarding list failed");
-            throw new InitiativeException(
-                    InternalServerError.CODE,
-                    e.getMessage(),
-                    HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new OnboardingInvocationException("An error occurred in the microservice onboarding",true,e);
         }
         List<StatusOnboardingDTO> statusOnboardingDTOS = new ArrayList<>();
         for (OnboardingStatusCitizenDTO onboardingStatusCitizenDTO : responseOnboardingDTO.getOnboardingStatusCitizenDTOList()) {
@@ -566,10 +520,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
                 statusOnboardingDTOS.add(statusOnboardingDTO);
 
             } catch (Exception e) {
-                throw new InitiativeException(
-                        InternalServerError.CODE,
-                        e.getMessage(),
-                        HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new DecryptInvocationException("An error occurred during the decrypt invocation",true,e);
             }
         }
         auditUtilities.logOnboardingCitizen(this.getUserId(), initiativeId, organizationId);
@@ -584,17 +535,9 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
         log.info("start get ranking, initiative: " + initiativeId);
         Initiative initiative = initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(
                         organizationId, initiativeId, true)
-                .orElseThrow(() -> new InitiativeException(
-                        InitiativeConstants.Exception.NotFound.CODE,
-                        String.format(
-                                InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE,
-                                initiativeId),
-                        HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new InitiativeNotFoundException(InitiativeConstants.Exception.NotFound.INITIATIVE_NOT_FOUND_MESSAGE.formatted(initiativeId)));
         if (initiative.getGeneral() != null && !initiative.getGeneral().getRankingEnabled()) {
-            throw new InitiativeException(
-                    InternalServerError.CODE,
-                    InternalServerError.NO_RANKING,
-                    HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new InitiativeNoRankingException("Initiative[%s] is without ranking".formatted(initiativeId));
         }
         String userId = null;
         if (beneficiary != null) {
@@ -603,10 +546,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
                         new CFDTO(beneficiary));
                 userId = encryptedCfDTO.getToken();
             } catch (Exception e) {
-                throw new InitiativeException(
-                        InternalServerError.CODE,
-                        e.getMessage(),
-                        HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new EncryptInvocationException("An error occurred during the encrypt invocation",true,e);
             }
         }
         RankingPageDTO rankingPageDTO;
@@ -615,10 +555,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
             log.info("response ranking: " + rankingPageDTO);
         } catch (Exception e) {
             auditUtilities.logInitiativeError(this.getUserId(), initiativeId, organizationId, "request for ranking list failed");
-            throw new InitiativeException(
-                    InternalServerError.CODE,
-                    e.getMessage(),
-                    HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new RankingInvocationException("An error occurred in the microservice ranking",true,e);
         }
         List<BeneficiaryRankingDTO> beneficiaryRankingDTOS = new ArrayList<>();
         for (RankingRequestDTO rankingRequestDTO : rankingPageDTO.getContent()) {
@@ -640,10 +577,7 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
                 beneficiaryRankingDTOS.add(beneficiaryRankingDTO);
 
             } catch (Exception e) {
-                throw new InitiativeException(
-                        InternalServerError.CODE,
-                        e.getMessage(),
-                        HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new DecryptInvocationException("An error occurred during the decrypt invocation",true,e);
             }
         }
         auditUtilities.logDetailUser(this.getUserId(), initiativeId, organizationId);
@@ -676,9 +610,10 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
                 .build();
         if(!commandsProducer.sendCommand(deleteInitiativeCommand)){
             log.error("[DELETE_INITIATIVE] - Initiative: {}. Something went wrong while sending the message on Commands Queue", initiativeId);
-            throw new InitiativeException(InitiativeConstants.Exception.Publish.InternalServerError.CODE,
-                    String.format(InitiativeConstants.Exception.Publish.InternalServerError.COMMANDS_QUEUE, deleteInitiativeCommand.getEntityId(), deleteInitiativeCommand.getOperationType()),
-                    HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new CommandProducerException(
+                    "Something went wrong while sending the message with entityId [%s] and operationType [%s] on the Commands Queue"
+                            .formatted(deleteInitiativeCommand.getEntityId(),deleteInitiativeCommand.getOperationType())
+            );
         }
 
         initiativeRepository.deleteById(initiativeId);
@@ -697,11 +632,10 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
                 .build();
         if(!commandsProducer.sendCommand(createInitiativeStatistics)){
             log.error("[CREATE_INITIATIVE_STATISTICS] - Initiative: {}. Something went wrong while sending the message on Commands Queue", initiativeId);
-            throw new InitiativeException(InitiativeConstants.Exception.Publish.InternalServerError.CODE,
-                    String.format(InitiativeConstants.Exception.Publish.InternalServerError.COMMANDS_QUEUE,
-                            createInitiativeStatistics.getEntityId(),
-                            createInitiativeStatistics.getOperationType()),
-                    HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new CommandProducerException(
+                    "Something went wrong while sending the message with entityId [%s] and operationType [%s] on the Commands Queue"
+                            .formatted(createInitiativeStatistics.getEntityId(),createInitiativeStatistics.getOperationType())
+            );
         }
     }
 
@@ -709,19 +643,15 @@ public class InitiativeServiceImpl extends InitiativeServiceRoot implements Init
     public KeysDTO getTokenKeys(String initiativeId) {
         log.info("[GET_SERVICE_IO_TOKEN_KEYS] - Initiative: {}. Getting serviceIO token keys", initiativeId);
         Initiative initiative = initiativeRepository.findById(initiativeId)
-                .orElseThrow(() -> new InitiativeException(
-                        InitiativeConstants.Exception.NotFound.CODE,
-                        String.format(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE, initiativeId),
-                        HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new InitiativeNotFoundException(
+                        InitiativeConstants.Exception.NotFound.INITIATIVE_NOT_FOUND_MESSAGE.formatted(initiativeId)
+                ));
         try {
             return ioManageBackEndRestConnector.getServiceKeys(initiative.getAdditionalInfo().getServiceId());
         } catch (Exception e) {
-            throw new InitiativeException(InternalServerError.CODE,
-                        e.getMessage(),
-                        HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new IOBackEndInvocationException("An error occurred during the IO Back-end invocation", true, e);
         }
     }
-
     public void validate(String contentType, String fileName) {
         Assert.notNull(fileName, "file name cannot be null");
 
